Added some Monsters, refactored names, added HUD and TermColors class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,4 +23,5 @@ add_executable(untitled
         include/Wolf.h
         src/Skeleton.cpp
         include/Skeleton.h
+        include/TermColors.h
 )
